@@ -85,6 +85,7 @@ floatingPointBase.uselocaleDependendFormat=Use locale-dependent format ({0}), ({
 floatingPointBase.uselocaleDependendFormat.minDecimalDigits=a) minimum number of decimal digits of (0 means no minimum)
 floatingPointBase.uselocaleDependendFormat.maxDecimalDigits=b) maximum number of decimal digits of
 dataTypeBlob.useColumnLabelInsteadColumnName=Use column labels instead of column names in result headers
+dataTypeGeneral.formatXmlJsonWhenDisplayedInPopupPanel=Format Xml/Json when table data is displayed in detail panel.
 
 dataTypeGeneral.generalType=General (applies to all types)
 BigDataToTextareaLoader.loading=Loading...
