@@ -55,7 +55,9 @@ popupeditableIoPanel.errorWritingFile=There was an error while writing file {0}.
 popupeditableIoPanel.exportError100=Export Error
 popupEditableIoPanel.wrapLines=Wrap Lines on/off
 popupEditableIoPanel.wrapWord=Wrap Word on/off
-popupEditableIoPanel.reformatXml=Reformat Xml/Json
+ReformatHandler.reformatXml=Reformat Xml/Json
+popupEditableIoPanel.popup.menu.reformatXml=Reformat Xml/Json
+
 
 popupeditableIoPanel.browse.tooltip=Select the file to export into
 popupeditableIoPanel.export.tooltip=Export to file
